# bkzyn

./: .gitignore  Brewfile  Cargo.toml  GEMINI.md  LICENSE  LOGIC.md  PLAN.md  README.md  backup.toml  docker-compose.yml  flake.nix  install.sh  setup.sh  test_clap.rs  test_toml.rs  test_toml2.rs  update.py  update.toml
.github/workflows/: ci.yml
config/git/: config
config/mise/: config.toml
config/tmux/: tmux.conf
config/zsh/: .zprofile  .zshenv  .zshrc  binding.zsh  fzf.zsh
data/config/bkzyn/: backup.toml  package.toml
data/config/herdr/: config.toml
data/config/nvim/: init.lua
data/config/starship/: default.toml  schema.json  vscode.toml
data/config/vim/: vimrc
data/config/zsh/: .zshrc  aliases.zsh
script/: Dockerfile.test  build.sh  e2e_test.sh  test_setup_docker.sh
src/: config.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cmd/: add.rs  backup.rs  init.rs  log.rs  mod.rs  pattern.rs  remove.rs  restore.rs  rollback.rs  save.rs  setup.rs  status.rs  sync.rs
