[package]
name = "bkzyn"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
zstd = "0.13"
tar = "0.4"
ignore = "0.4"
dirs = "5.0"
globset = "0.4"
toml_edit = "0.22"
minijinja = "2.21.0"

[dev-dependencies]
tempfile = "3.27.0"
